# image2ascii

./: CMakeLists.txt  README.md
src/: script.c  script.h
stb_image/: stb_image.c
